Fixed spacing of time for general chat

--- a/styles/Pages/chat.css
+++ b/styles/Pages/chat.css
@@ -83,17 +83,22 @@
   border-radius: 15px 15px 15px 0;
 }
 .sent-message {
+  margin: 0;
   visibility: hidden;
 }
 .received-message {
-  font-size: 10px;
+  font-weight: bolder;
+  font-size: 12px;
   margin: 10px;
   margin: 20px;
   margin-bottom: 1px;
+  letter-spacing: 1px;
+  color: rgb(58, 58, 58);
 }
 #online-users {
   padding: 0 10px;
   background-color: rgba(208, 224, 238, 0.318);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
   text-align: center;
   color: rgb(255, 255, 255);
@@ -125,11 +130,11 @@
   margin-top: 0;
 }
 .message-time {
-  font-size: 12px;
+  font-size: 10px;
 
   position: absolute;
   bottom: -25px;
-  right: 0px;
+  right: -10px;
   margin-bottom: 10px;
 }
 
